--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   lottie: ^3.1.2
   flutter_svg: ^2.0.10+1
   flutter_bloc: ^8.1.5
+  http: ^1.2.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
