--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.1
   equatable: ^2.0.5
   cached_network_image: ^3.3.1
+  icons_plus: ^5.0.0
 
 dev_dependencies:
   flutter_test:
