--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   equatable: ^2.0.5
   cached_network_image: ^3.3.1
   icons_plus: ^5.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
